--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Gantari:ital,wght@0,100..900;1,100..900&family=Macondo&family=Yellowtail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Yellowtail&display=swap');
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
@@ -46,7 +46,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: 'Bubblegum Sans', sans-serif;
+    font-family: 'Noto Sans', serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
