--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --color-destructive: var(--destructive);
   --color-border: var(--border);
   --color-muted: var(--muted);
+  --color-card: var(--card);
 }
 
 :root {
@@ -27,7 +28,7 @@
   --violet-blue: #1847c9;
   --royal-blue: #0a1f6b;
   --red: #d70040;
-  --dark-blue: #001219;
+  --dark-blue: #181818;
 
   /* Essentials only */
   --background: var(--black);
